--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
@@ -48,7 +48,7 @@
 
 			override public function get hasSettings() : Boolean
 			{
-				return true;
+				return false;
 			}
 
 			override public function get hasBody() : Boolean
