--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:HGroup xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
+		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
-		  
 		  height="100%" width="100%">
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.ide.modules.scripts.view.skins.PanelSkin;
+		]]>
+	</fx:Script>
 
 	<components:ScriptEditor id="sriptEditor"
-							 height="100%" width="100%" />
+							 height="100%" width="100%"/>
 
 	<s:VGroup height="100%" width="250">
 
 		<components:PagesPanel id="pagesPanel"
-							   title="{ resourceManager.getString( 'Scripts_General', 'pages_panel_title' ) }"
-							   width="100%" />
+							   width="100%"
+							   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+							   title="{ resourceManager.getString( 'Scripts_General', 'pages_panel_title' ) }"/>
 
 		<components:ContainersPanel id="containersPanel"
-									title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"
-									width="100%" />
+									width="100%"
+									skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+									title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"/>
 
 		<components:ServerScriptsPanel id="serverScriptsPanel"
-									   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"
-									   width="100%" />
+									   width="100%"
+									   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+									   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"/>
 
 		<components:LibrariesPanel id="librariesPanel"
-								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"
-								   width="100%" />
+								   width="100%"
+								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
 	</s:VGroup>
 </s:HGroup>
