--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/PagesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/PagesPanel.mxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 
+		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 height="58">
 
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
-			
+
 			import net.vdombox.ide.common.vo.PageVO;
 			import net.vdombox.ide.modules.scripts.events.PagesPanelEvent;
 			[Bindable]
@@ -18,21 +17,26 @@
 			{
 				return pagesComboBox.selectedItem as PageVO;
 			}
-			
+
 			public function set selectedPage( value : PageVO ) : void
 			{
 				pagesComboBox.selectedItem = value;
 			}
-			
+
 			public function set pages( value : Array ) : void
 			{
-				_pages = new ArrayList( value );
+				if ( value )
+					_pages = new ArrayList( value );
+				else
+					_pages = null;
+				
+				pagesComboBox.selectedIndex = -1;
 			}
 		]]>
 	</fx:Script>
 
 	<s:ComboBox id="pagesComboBox"
-				 dataProvider="{ _pages }" labelField="name" width="100%"
-				 verticalCenter="0"
-				 change="dispatchEvent( new PagesPanelEvent( PagesPanelEvent.PAGE_CHANGED ) )" />
+				dataProvider="{ _pages }" labelField="name" width="100%"
+				verticalCenter="0"
+				change="dispatchEvent( new PagesPanelEvent( PagesPanelEvent.PAGE_CHANGED ) )"/>
 </s:Panel>
