--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -1,79 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:mx="library://ns.adobe.com/flex/mx">
+		 creationComplete="creationCompleteHandler()">
 
 	<fx:Script>
 		<![CDATA[
-			import spark.events.IndexChangeEvent;
+			import mx.binding.utils.BindingUtils;
 			import mx.collections.ArrayList;
-
+			import mx.events.FlexEvent;
+			
 			import net.vdombox.ide.common.vo.ServerActionVO;
 			import net.vdombox.ide.modules.scripts.events.ServerScriptsPanelEvent;
+			
+			import spark.events.IndexChangeEvent;
 
 			[Bindable]
 			private var _scripts : ArrayList;
 
 			public function get selectedScript() : ServerActionVO
 			{
-				return actionList.selectedItem;
+				return actionList.selectedItem as ServerActionVO;
 			}
 
 			public function set selectedScript( value : ServerActionVO ) : void
 			{
 				actionList.selectedItem = value;
-				actionList.validateNow();
+			}
 
-//				if ( actionList.selectedIndex == -1 )
-//					deleteButton.enabled = false;
-//				else
-//					deleteButton.enabled = true;
+			public function get scripts() : Array
+			{
+				return _scripts ? _scripts.source : null;
 			}
 
 			public function set scripts( value : Array ) : void
 			{
-				if ( value.length > 0 )
+				var oldSelectedItem : ServerActionVO;
+				var oldSelectedIndex : int;
+				var isSelectedItemChanged : Boolean = true;
+				
+				if( actionList )
 				{
+					oldSelectedIndex = actionList.selectedIndex;
+					oldSelectedItem = actionList.selectedItem as ServerActionVO;
+				}
+				
+				if ( value && value.length > 0 )
+				{
+					var newSelectedIndex : int = -1;
+
+					if ( oldSelectedItem )
+					{
+						var i : uint;
+						for ( i = 0; i < value.length; i++ )
+						{
+							if ( ServerActionVO( value[ i ] ).objectID == oldSelectedItem.objectID ||
+								ServerActionVO( value[ i ] ).name == oldSelectedItem.name )
+							{
+								newSelectedIndex = i;
+								isSelectedItemChanged = false;
+								
+								break;
+							}
+						}
+					}
+					else
+					{
+						isSelectedItemChanged = false;
+					}
+					
 					_scripts = new ArrayList( value );
-//					deleteButton.enabled = false;
-					actionList.selectedIndex = -1;
+					
+					if( newSelectedIndex != -1 )
+						actionList.validateNow();
+					
+					actionList.selectedIndex = newSelectedIndex;
 				}
 				else
 				{
 					_scripts = null;
-//					deleteButton.enabled = false;
-					actionList.selectedIndex = -1;
+					
+					if( actionList.selectedIndex != -1 )
+						actionList.selectedIndex = -1;
+					
+					if( oldSelectedIndex == -1 )
+						isSelectedItemChanged = false;
 				}
 
-				dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.SELECTED_SERVER_ACTION_CHANGED ) );
+				if( isSelectedItemChanged )
+					dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.SELECTED_SERVER_ACTION_CHANGED ) );
 			}
 
 			protected function actionList_changeHandler() : void
 			{
-//				if ( actionList.selectedItem )
-//					deleteButton.enabled = true;
-//				else
-//					deleteButton.enabled = false;
-
 				dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.SELECTED_SERVER_ACTION_CHANGED ) )
+			}
+
+			protected function creationCompleteHandler() : void
+			{
+				BindingUtils.bindSetter( indexChanged, actionList, "selectedIndex", true );
+			}
+
+			protected function deleteButton_clickHandler() : void
+			{
+				dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.DELETE_ACTION ) )
+			}
+
+			private function indexChanged( value : int ) : void
+			{
+				if ( value == -1 && deleteButton.enabled )
+					deleteButton.enabled = false;
+				else if ( !deleteButton.enabled && value != -1 )
+					deleteButton.enabled = true;
 			}
 		]]>
 	</fx:Script>
 
 	<s:List id="actionList"
 			dataProvider="{ _scripts }" height="100%" labelField="name" width="100%"
-			change="actionList_changeHandler()" />
+			change="actionList_changeHandler()"/>
 
 	<s:controlBarContent>
 
-		<mx:Spacer width="100%" />
-<!--
+		<mx:Spacer width="100%"/>
+
 		<s:Button label="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_add' ) }"
-				  click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.CREATE_ACTION ) )" />
+				  click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.CREATE_ACTION ) )"/>
 
 		<s:Button id="deleteButton"
-				  enabled="false"
 				  label="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_delete' ) }"
-				  click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.DELETE_ACTION ) )" />-->
+				  click="deleteButton_clickHandler()"/>
 	</s:controlBarContent>
 </s:Panel>
