git-svn-id: http://svn.vdombox.ru/flextools/trunk@5992 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -9,6 +9,17 @@
 		[ResourceBundle("Tree_General")] 
 	</fx:Metadata>
 
+	<fx:Style>
+		@namespace mx "library://ns.adobe.com/flex/halo";
+		@namespace s "library://ns.adobe.com/flex/spark";
+		@namespace common "net.vdombox.ide.common.*";
+		
+		s|Panel
+		{
+			font-family : "Verdana";
+		}
+	</fx:Style>
+	
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.tree.ApplicationFacade;
@@ -48,7 +59,7 @@
 
 			override public function get hasSettings() : Boolean
 			{
-				return true;
+				return false;
 			}
 
 			override public function get hasBody() : Boolean
