--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:Group xmlns:components="net.vdombox.ide.modules.tree.view.components.*"
+		 xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:components="net.vdombox.ide.modules.tree.view.components.*"
-		 
 		 height="100%" width="100%">
 
 	<s:layout>
 
-		<s:HorizontalLayout />
+		<s:HorizontalLayout/>
 	</s:layout>
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.ide.modules.tree.view.skins.PanelSkin;
+		]]>
+	</fx:Script>
 
-	<components:TreeCanvas id="treeCanvas" height="100%" width="100%" />
+	<components:WorkArea id="treeCanvas"
+						 height="100%" width="100%"/>
 
-	<s:Group height="100%">
+	<s:VGroup height="100%" width="250"
+			  paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5">
 
-		<s:layout>
-
-			<s:VerticalLayout />
-		</s:layout>
-
-		<components:MenuPanel id="menuPanel"
-							  width="100%" />
+		<!--<components:MenuPanel id="menuPanel"
+			 width="100%"
+			 skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>-->
 
 		<components:PropertiesPanel id="propertiesPanel"
-									width="100%" />
+									width="100%"
+									cornerRadius="5" skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
 
 		<components:LevelsFilterPanel id="levelsPanel"
-									  width="100%" />
-	</s:Group>
+									  width="100%"
+									  cornerRadius="5" skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
+	</s:VGroup>
 </s:Group>
