--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
@@ -9,9 +9,9 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
-
+			
 			import net.vdombox.ide.common.vo.TypeVO;
-			import net.vdombox.ide.modules.tree.events.CreatePageWindowEvent;
+			import net.vdombox.ide.modules.tree.events.WindowEvent;
 
 			[Bindable]
 			private var _pagesDataProvider : ArrayList;
@@ -40,9 +40,9 @@
 		<mx:Spacer width="100%" />
 
 		<s:Button label="Create"
-				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CREATE ) )" />
+				  click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_APPLY ) )" />
 
 		<s:Button label="Cancel"
-				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CANCEL ) )" />
+				  click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_CANCEL ) )" />
 	</s:HGroup>
 </s:VGroup>
